--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       - 5000:5000
     env_file:
       - local.env
-  #   depends_on:
-  #     - redis
-  # redis:
-  #   image: "redis:alpine"
+    depends_on:
+      - redis
+
+  redis:
+    image: "redis:alpine"
